[package]
name = "physicsrenderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[package.metadata.wasm-pack.profile.release]     # release builds (default)
wasm-opt = [
  "-O",                      # optimisation level
  "--enable-bulk-memory",    # accept bulk-memory feature
  "--enable-bulk-memory-opt", # accept memory.copy/fill ops
  "--enable-nontrapping-float-to-int"  
]

[package.metadata.wasm-pack.profile.dev]         # optional, for `--dev`
wasm-opt = [
  "-O",
  "--enable-bulk-memory",
  "--enable-bulk-memory-opt",
  "--enable-nontrapping-float-to-int"     # ← NEW

]